force-app/main/default/force-app/main/default/objects/HVAC_Installation_Job__c/fields/HVAC_Assigned_Technician__c.field-meta.xml
<CustomField>
    <fullName>HVAC_Assigned_Technician__c</fullName>
    <label>Assigned Technician</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Installation Jobs</relationshipLabel>
    <relationshipName>HVAC_Installation_Jobs</relationshipName>
</CustomField>