force-app/main/default/force-app/main/default/objects/HVAC_Installation_Job__c/fields/HVAC_Install_Date__c.field-meta.xml
<CustomField>
    <fullName>HVAC_Install_Date__c</fullName>
    <label>Install Date</label>
    <type>Date</type>
</CustomField>